# dhgen

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dhgen/: __init__.py  gen.py  geoadmin.py  size.py
examples/: generate_dhn.py  generate_dhn_file.py
examples/EuroSun/: GeoAdmin_cache.gpkg  README.md  broc_comparison.py
sample_data/: sample_input.gpkg
tests/: sample_networks.py
