# DHgeN: a Python module for generating District Heating Networks layouts.

# Copyright (c) 2022 Idiap Research Institute, http://www.idiap.ch/
# Written by Giuseppe Peronato <Giuseppe.Peronato@idiap.ch>

# This file is part of DHgeN.

# DHgeN is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.

# DHgeN is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with DHgeN. If not, see <http://www.gnu.org/licenses/>

[build-system]
# Minimum requirements for the build system to execute.
requires = [
"setuptools>=61.0.0",
"wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhgen"
version = "0.0.2"
requires-python = ">=3.7"
dependencies = [
	"networkx>=2.6",
	"geopandas",
	"requests",
]

[project.optional-dependencies] 
optional = [
	"geovoronoi",
	"matplotlib",
]
test = [
# harcoded versions for testing/reproducibility
"geopandas==0.12.2",
"pandas==1.5.3",
"networkx==3.0",
"requests==2.28.2",
]

